Made changes for pr. Div changed into a button so it's clickable (no longer wrapped in an 'a' element. Fixed issue with storing props in state.

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -37,7 +37,8 @@ label {
   font-weight: 600;
 }
 
-a:active {
+a:active,
+button:active {
   transition-duration: 0.1s;
   transform: scale(0.98);
 }
